--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./server/main.js"
+    "build": "coffee --compile --output ./public/js/compiled ./public/coffee",
+    "start": "nodemon ./server/main.coffee"
   },
   "dependencies": {
+    "coffee-script": "1.10.x",
     "express": "~4.11.1",
     "nodemon": "~1.3.7",
     "socket.io": "^1.3.5"
