--- a/package.json
+++ b/package.json
@@ -1,15 +1,44 @@
 {
   "name": "ourgame",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "coffee --compile --output ./public/js/compiled ./public/coffee",
+    "build": "npm run clean; npm run lint; npm run gulp",
+    "clean": "rm -rf dist/",
+    "gulp": "gulp",
+    "lint": "gulp lint",
     "start": "nodemon ./server/main.coffee"
   },
   "dependencies": {
-    "coffee-script": "1.10.x",
-    "express": "~4.11.1",
-    "nodemon": "~1.3.7",
-    "socket.io": "^1.3.5"
+    "browserify": "^13.0.0",
+    "browserify-shim": "^3.8.12",
+    "coffeeify": "^2.0.1",
+    "del": "^2.2.0",
+    "event-stream": "^3.3.2",
+    "express": "^4.11.1",
+    "glob": "^7.0.3",
+    "gulp": "^3.9.1",
+    "gulp-bower": "^0.0.13",
+    "gulp-coffeelint": "^0.6.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-stylus": "^2.3.0",
+    "gulp-uglify": "^1.5.3",
+    "nodemon": "^1.3.7",
+    "socket.io": "^1.3.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {},
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "Phaser": "global:Phaser"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kpeng94/congenial-winner"
   }
 }
