--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
+    "coffee-script": "^1.10.0",
     "coffeeify": "^2.0.1",
     "del": "^2.2.0",
     "event-stream": "^3.3.2",
