--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^1.5.3",
+    "jsonfile": "^2.3.0",
     "nodemon": "^1.3.7",
     "socket.io": "^1.3.5",
     "vinyl-buffer": "^1.0.0",
