--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -rf dist/",
     "gulp": "gulp",
     "lint": "gulp lint",
+    "postinstall": "npm run gulp",
     "start": "nodemon ./server/main.coffee"
   },
   "dependencies": {
